--- a/login.html
+++ b/login.html
@@ -1,11 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>BrainView AI - Login</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    
+  <div class="container">
+    <div class="card">
+      <div class="logo">
+        <img src="logo-placeholder.png" alt="BrainView AI Logo">
+      </div>
+      <h2>BrainView AI</h2>
+      <form action="/login" method="POST">
+        <div class="form-group">
+          <label for="user-id">User ID</label>
+          <input type="text" id="user-id" name="user-id" placeholder="Enter your User ID" required>
+        </div>
+        <div class="form-group">
+          <label for="password">Your Password</label>
+          <div class="password-container">
+            <input type="password" id="password" name="password" placeholder="Enter your Password" required>
+            <button type="button" class="toggle-password">👁️</button>
+          </div>
+        </div>
+        <button type="submit" class="btn-primary">LOGIN</button>
+        <div class="links">
+          <a href="/forgot-password">Forgot Your Password?</a>
+          <a href="/create-account">Create Account</a>
+        </div>
+      </form>
+    </div>
+  </div>
 </body>
 </html>
