--- a/forgotPassword.html
+++ b/forgotPassword.html
@@ -3,17 +3,18 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>BrainView AI - Create Account</title>
-  <link rel="stylesheet" href="/static/css/newAccStyles.css">
+  <title>BrainView AI - Forgot Password</title>
+  <link rel="stylesheet" href="/static/css/forgotPassStyles.css">
 </head>
 <body>
   <div class="container">
     <div class="card">
       <div class="logo">
-        <img src="/assets/logo.png" alt="BrainView AI Logo">
+        <img src="logo.png" alt="BrainView AI Logo">
       </div>
-      <h2>Create A New Account</h2>
-      <form action="/create-account" method="POST">
+      <h2>Reset Your Password</h2>
+      <p class="description">Enter your User ID and create a new password to reset your account access.</p>
+      <form action="/reset-password" method="POST">
         <div class="form-group">
           <label for="user-id">User ID</label>
           <input type="text" id="user-id" name="user-id" placeholder="Enter your User ID" required>
@@ -21,20 +22,20 @@
         <div class="form-group">
           <label for="new-password">New Password</label>
           <div class="password-container">
-            <input type="password" id="new-password" name="new-password" placeholder="Enter your Password" required>
+            <input type="password" id="new-password" name="new-password" placeholder="Enter your New Password" required>
             <button type="button" class="toggle-password" aria-label="Toggle Password Visibility">👁️</button>
           </div>
         </div>
         <div class="form-group">
           <label for="confirm-password">Confirm Password</label>
           <div class="password-container">
-            <input type="password" id="confirm-password" name="confirm-password" placeholder="Re-enter your Password" required>
+            <input type="password" id="confirm-password" name="confirm-password" placeholder="Re-enter your New Password" required>
             <button type="button" class="toggle-password" aria-label="Toggle Password Visibility">👁️</button>
           </div>
         </div>
-        <button type="submit" class="btn-primary">CREATE ACCOUNT</button>
+        <button type="submit" class="btn-primary">RESET PASSWORD</button>
         <div class="links">
-          <a href="/login.html">Already have an account? Login</a>
+          <a href="/login.html">Return to Login</a>
         </div>
       </form>
     </div>
