updated user settings ui adjustments

--- a/help.html
+++ b/help.html
@@ -15,8 +15,8 @@
         <nav class="nav-links">
           <a href="main.html">CT Scan Analyzer</a>
           <a href="patientManager.html">Patient Manager</a>
-          <a href="settings.html" class="active">User Settings</a>
-          <a href="help.html">Help</a>
+          <a href="settings.html">User Settings</a>
+          <a href="help.html" class="active">Help</a>
         </nav>
         <div class="user-menu">
           <button id="user-dropdown-btn">
