--- a/settings.html
+++ b/settings.html
@@ -33,8 +33,8 @@
   <main class="content">
     <h1>User Settings</h1>
     <div class="button-group">
-      <button class="btn primary" id="edit-user-profile">Edit/Update User Profile</button>
-      <button class="btn primary" id="contact-admin">Contact Admin</button>
+      <button class="btn primary" id="edit-user-profile">Edit/Update User Profile</button></br>
+      <button class="btn primary" id="contact-admin">Contact Admin</button></br>
       <button class="btn secondary" id="logout">Log Out</button>
     </div>
   </main>
