restruct the login and register module with mysql database, restruct the ct files scan upload to mysql databa

--- a/help.html
+++ b/help.html
@@ -4,12 +4,12 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>User Settings - BrainView AI</title>
-  <link rel="stylesheet" href="static/css/settingsStyles.css">
+  <link rel="stylesheet" href="/g17-capstone-BrainViewAI/static/css/settingsStyles.css">
 </head>
 <body>
     <header class="navbar">
         <div class="logo">
-          <img src="/assets/logo.png" alt="BrainView AI Logo">
+          <img src="/g17-capstone-BrainViewAI/assets/logo.png" alt="BrainView AI Logo">
           <span>BrainView AI</span>
         </div>
         <nav class="nav-links">
@@ -35,6 +35,6 @@
     <p>© 2024 BrainView AI. All Rights Reserved</a></p>
   </footer>
 
-  <script src="/static/js/settings.js"></script>
+  <script src="/g17-capstone-BrainViewAI/static/js/settings.js"></script>
 </body>
 </html>
