--- a/patientManager.html
+++ b/patientManager.html
@@ -4,13 +4,13 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>BrainView AI - Patient Manager</title>
-  <link rel="stylesheet" href="/static/css/patientManagerStyle.css">
+  <link rel="stylesheet" href="/g17-capstone-BrainViewAI/static/css/patientManagerStyle.css">
 </head>
 <body>
   <!-- Top Navigation Bar -->
   <header class="navbar">
     <div class="logo">
-      <img src="/assets/logo.png" alt="BrainView AI Logo">
+      <img src="/g17-capstone-BrainViewAI/assets/logo.png" alt="BrainView AI Logo">
       <span>BrainView AI</span>
     </div>
     <nav class="nav-links">
