--- a/login.html
+++ b/login.html
@@ -1,38 +1,108 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>BrainView AI - Login</title>
-  <link rel="stylesheet" href="/static/css/loginStyles.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>BrainView AI - Login</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            margin: 0;
+            background-color: #f0f2f5;
+        }
+        .container {
+            background-color: white;
+            border-radius: 8px;
+            box-shadow: 0 4px 6px rgba(0,0,0,0.1);
+            padding: 30px;
+            width: 300px;
+        }
+        .logo {
+            text-align: center;
+            margin-bottom: 20px;
+        }
+        .logo img {
+            max-width: 150px;
+        }
+        .form-group {
+            margin-bottom: 15px;
+        }
+        .form-group input {
+            width: 100%;
+            padding: 10px;
+            border: 1px solid #ddd;
+            border-radius: 4px;
+            box-sizing: border-box;
+        }
+        .password-container {
+            position: relative;
+        }
+        .password-container .toggle-password {
+            position: absolute;
+            right: 10px;
+            top: 50%;
+            transform: translateY(-50%);
+            cursor: pointer;
+        }
+        #errorContainer {
+            color: red;
+            text-align: center;
+            margin-bottom: 15px;
+            display: none;
+        }
+        button {
+            width: 100%;
+            padding: 10px;
+            background-color: #4CAF50;
+            color: white;
+            border: none;
+            border-radius: 4px;
+            cursor: pointer;
+        }
+        .links {
+            text-align: center;
+            margin-top: 15px;
+        }
+        .links a {
+            color: #1877f2;
+            text-decoration: none;
+            margin: 0 10px;
+        }
+    </style>
 </head>
 <body>
-  <div class="container">
-    <div class="card">
-      <div class="logo">
-        <img src="/assets/logo.png" alt="BrainView AI Logo">
-      </div>
-      <h2>BrainView AI</h2>
-      <form id="login-form">
-        <div class="form-group">
-          <label for="user-id">User ID</label>
-          <input type="text" id="user-id" name="user-id" placeholder="Enter your User ID" required>
+    <div class="container">
+        <div class="logo">
+            <img src="/g17-capstone-BrainViewAI/assets/logo.png" alt="BrainView AI Logo">
         </div>
-        <div class="form-group">
-          <label for="password">Your Password</label>
-          <div class="password-container">
-            <input type="password" id="password" name="password" placeholder="Enter your Password" required>
-            <button type="button" class="toggle-password">👁️</button>
-          </div>
-        </div>
-        <button type="submit" class="btn-primary">LOGIN</button>
+
+        <h2>BrainView AI</h2>
+
+        <div id="errorContainer"></div>
+
+        <form name="loginForm" method="POST">
+            <div class="form-group">
+                <input type="text" id="userId" name="userId" placeholder="User ID" required>
+            </div>
+
+            <div class="form-group password-container">
+                <input type="password" id="password" name="password" placeholder="Your Password" required>
+                <span class="toggle-password">👁️</span>
+            </div>
+
+            <button type="submit">LOGIN</button>
+        </form>
+
         <div class="links">
-          <a href="/forgotPassword.html">Forgot Your Password?</a>
-          <a href="/newAcc.html">Create Account</a>
+            <a href="/forgotPassword.html">Forgot Your Password?</a>
+            <a href="/g17-capstone-BrainViewAI/newAcc.html">Create Account</a>
         </div>
-      </form>
     </div>
-  </div>
-  <script src="static/js/login.js"></script>
+
+    <script src="auth-script.js"></script>
 </body>
 </html>
