--- a/main.html
+++ b/main.html
@@ -201,18 +201,22 @@
   /* Styling for image preview */
   .uploaded-image {
     max-width: 100%;
-    max-height: 300px;
+    max-height: 400px;
     object-fit: contain;
+    padding: 10px;
+    box-sizing: border-box;
   }
 
   .image-placeholder {
-    width: 100%;
-    height: 300px;
+    width: calc(100% - 4px);
+    height: 400px;
     border: 2px dashed #ccc;
     display: flex;
     align-items: center;
     justify-content: center;
-    margin-top: 20px;
+    margin: 20px auto;
+    box-sizing: border-box;
+    max-width: 1400px;
   }
 
   .btn-primary:disabled {
