--- a/patientManager.html
+++ b/patientManager.html
@@ -57,7 +57,8 @@
               <th>Age</th>
               <th>Condition</th>
               <th>Date Recorded</th>
-              <th>Options</th>
+              <th>CT Scan</th>
+              <th>Actions</th>
             </tr>
           </thead>
           <tbody id="patient-list">
@@ -71,7 +72,7 @@
               <td>
                 <button class="btn-secondary view-ct-scan-btn">View CT Scan</button>
               </td>
-              <td>
+              <td class="action-buttons">
                 <button class="btn-secondary">View</button>
                 <button class="btn-danger delete-btn">Delete</button>
               </td>
@@ -85,7 +86,7 @@
               <td>
                 <button class="btn-secondary view-ct-scan-btn">View CT Scan</button>
               </td>
-              <td>
+              <td class="action-buttons">
                 <button class="btn-secondary">View</button>
                 <button class="btn-danger delete-btn">Delete</button>
               </td>
